- hotjar impl - page jump fix - removed regular bootstrap - only material

--- a/web/app/themes/Foody/resources/sass/common/_sidebar.scss
+++ b/web/app/themes/Foody/resources/sass/common/_sidebar.scss
@@ -16,6 +16,12 @@ $sidebar-border: solid 1px rgba(151, 151, 151, 0.3);
 
     .widget {
       &.widget_text {
+        min-height: 561px;
+
+        &.widget_custom_html{
+          min-height: 350px;
+        }
+
         .widgettitle {
           font-size: 30px;
           font-weight: 900;
