--- a/web/app/themes/Foody/resources/sass/layout/_header.scss
+++ b/web/app/themes/Foody/resources/sass/layout/_header.scss
@@ -300,7 +300,7 @@ header {
               padding-top: 20px;
               padding-right: 148px;
               margin: .6rem auto 0;
-              max-height: 290px;
+              max-height: $dropdown-height;
               text-align: right;
               display: flex;
               flex-direction: column;
